# rocket_jsonapi

./: Cargo.toml  README.md  TODO.md
guide_book/: book.toml
guide_book/src/: SUMMARY.md  errors.md  getting-started.md  introduction.md
guide_book/src/errors/: _index.md
guide_book/src/request/: index.md  update.md
guide_book/src/response/: index.md  links.md  relationships.md  resources.md
rocket_jsonapi/: Cargo.toml
rocket_jsonapi/src/: data.rs  error.rs  lib.rs  links.rs  relationship.rs  request.rs  resource.rs  response.rs
rocket_jsonapi/src/core/: data_object.rs  general_response.rs  input_data.rs  links_serialize.rs  mod.rs  resource_identifier.rs  serialize_no_conversion.rs
rocket_jsonapi_derive/: Cargo.toml
rocket_jsonapi_derive/src/: lib.rs
src/: data.rs  info.rs  lib.rs  links.rs  meta.rs  relationship.rs  response.rs
src/core/: mod.rs
test_suite/: Cargo.toml
test_suite/tests/: error_macro.rs  play.rs  test_gen.rs  test_rocket_request.rs  test_rocket_response.rs  test_serialize.rs
tests/: play.rs
