[package]
name = "rocket_jsonapi"
version = "0.1.0"
authors = ["Peter Garnæs <pag@dbc.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3"
rocket = "0.4.2"

