[package]
name = "rocket_jsonapi_derive"
version = "0.1.0"
authors = ["Peter Garnæs <pag@dbc.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rocket_jsonapi_derive"
proc-macro = true

[dependencies]
syn = "0.14.4"
quote = "0.6.3"

[dev-dependencies]
rocket_jsonapi = { path = "../rocket_jsonapi" }