[package]
name = "rocket_jsonapi_derive"
version = "0.1.0"
authors = ["Peter Garnæs <pag@dbc.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rocket_jsonapi_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0.5"
quote = "1.0.2"

[dev-dependencies]
rocket_jsonapi = { path = "../rocket_jsonapi" }