[package]
name = "test_suite"
version = "0.1.0"
authors = ["Peter Garnæs <pag@dbc.dk>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rocket_jsonapi = { path = "../rocket_jsonapi", features = ["derive"] }
rocket_jsonapi_derive = { path = "../rocket_jsonapi_derive" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
